--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,219 +1,230 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  box-sizing: border-box;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-a{
-    cursor: pointer;
+a {
+  cursor: pointer;
 }
 body {
-    color: #222;
+  color: #222;
 }
-img{
-    max-width: 100%;
+img {
+  max-width: 100%;
 }
-main{
-    padding: 10px;
-    max-width: 960px;
-    margin: 0 auto;
+main {
+  padding: 10px;
+  max-width: 960px;
+  margin: 0 auto;
 }
-header{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    margin-bottom: 40px;
+header {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
-header a{
-    text-decoration: none;
-    color: inherit;
-    /* align-items: center; */
-    
+header a {
+  text-decoration: none;
+  color: inherit;
+  /* align-items: center; */
 }
-header a.logo{
-    width: 50px;
+header a.logo {
+  width: 50px;
 }
-header nav{
-    display: flex;
-    gap: 15px;
-    align-items: center;
+header nav {
+  display: flex;
+  gap: 15px;
+  align-items: center;
 }
-div.post{
-    display: grid;
-    grid-template-columns: 0.9fr 1.1fr;
-    gap: 20px;
-    margin-bottom: 25px
-}
-
-div.post div.text h2{
-    margin: 0;
-    font-size: 1.5rem;
+div.post {
+  display: grid;
+  grid-template-columns: 0.9fr 1.1fr;
+  gap: 20px;
+  margin-bottom: 25px;
 }
 
-div.post div.text a{
-    text-decoration: none;
-    color: inherit;
+div.post div.text h2 {
+  margin: 0;
+  font-size: 1.5rem;
 }
 
-div.post p.info{
-    margin: 6px 0;
-    color: #888;
-    font-size: .8rem;
-    font-weight: bold;
-    display: flex;
-    gap: 5px;
+div.post div.text a {
+  text-decoration: none;
+  color: inherit;
 }
-div.post p.info a.author{
-    color: #333;
+
+div.post p.info {
+  margin: 6px 0;
+  color: #888;
+  font-size: 0.8rem;
+  font-weight: bold;
+  display: flex;
+  gap: 5px;
 }
-div.post p.summary{
+div.post p.info a.author {
+  color: #333;
+}
+div.post p.summary {
+  margin: 8px 0;
+  line-height: 1.3rem;
+}
+@media (max-width: 700px) {
+  div.post {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 2500px) {
+  div.post p.summary {
     margin: 8px 0;
     line-height: 1.3rem;
-   
-}
-@media (max-width:700px) {
-    div.post{   
-    grid-template-columns: 1fr;   
-    }
-    
-}
-@media (max-width:2500px) {
-    div.post p.summary{
-        margin: 8px 0;
-        line-height: 1.3rem;
-        display: -webkit-box;
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;  
-        overflow: hidden;
-       
-    }
-}
-
-form.login, form.register{
-    max-width: 400px;
-    margin: 0 auto;
-}
-input{
-    display: block;
-    margin-bottom: 5px;
-    width: 98%;
-    padding: 5px;
-    border: 0;
-    padding: 5px 7px;
-    outline: none;
-    background-color: #fff;
-    border-bottom: 3px solid #ccc;
-
-    font-size: 22px;
-    letter-spacing: .1rem;
-}
-
-button{
-    cursor: pointer;
-    width: 100%;
-    background-color: #555;
-    font-size: 18px;
-    border: 0;
-    outline: none;
-    color: #fff;
-    border-radius: 5px;
-    padding: 5px 0;
-    margin-top: 10px;
-
-}
-button:hover{
-    background-color: #888;
-}
-form.login h1, form.register h1{
-    text-align: center;
-}
-
-.logoutbtn{
-    background-color: #ccc;
-    cursor: pointer;
-    border-radius: 4px;
-    padding: .2rem .5rem;
-    color: #333;
-}
-.logoutbtnicon{
-    background-color: #ccc;
-    cursor: pointer;
-    border-radius: 4px;
-    padding: .2rem .5rem;
-    color: #333;
-
-    display: inline-flex;
-    align-items: center;
-
-    gap: 6px;
-}
-.logoutbtn:hover .logoutbtnicon:hover{
-    background-color: antiquewhite;
-    transition: all;
-
-}
-
-.nostyle{
-    border: none;
-}
-
-img{
-    width: 500px;
-}
-.danger-not-allowed{
-    color: red;
-}
-div.post-page{
-    width: 100%;
-}
-
-div.post-page div.image{
-    max-height: 200px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
     overflow: hidden;
-    border-radius: 10px;
-    /* display: flex; */
+  }
 }
-div.post-page div.image img{
-    object-fit: contain;
-    width: 100%;
-    object-position: center center;
+
+form.login,
+form.register {
+  max-width: 400px;
+  margin: 0 auto;
+}
+input {
+  display: block;
+  margin-bottom: 5px;
+  width: 98%;
+  padding: 5px;
+  border: 0;
+  padding: 5px 7px;
+  outline: none;
+  background-color: #fff;
+  border-bottom: 3px solid #ccc;
+
+  font-size: 22px;
+  letter-spacing: 0.1rem;
+}
+
+button {
+  cursor: pointer;
+  width: 100%;
+  background-color: #555;
+  font-size: 18px;
+  border: 0;
+  outline: none;
+  color: #fff;
+  border-radius: 5px;
+  padding: 5px 0;
+  margin-top: 10px;
+}
+button:hover {
+  background-color: #888;
+}
+form.login h1,
+form.register h1 {
+  text-align: center;
+}
+
+.logoutbtn {
+  background-color: #ccc;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 0.2rem 0.5rem;
+  color: #333;
+}
+.logoutbtnicon {
+  background-color: #ccc;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 0.2rem 0.5rem;
+  color: #333;
+
+  display: inline-flex;
+  align-items: center;
+
+  gap: 6px;
+}
+.logoutbtn:hover,
+.logoutbtnicon:hover {
+  background-color: antiquewhite;
+  transition: all;
+}
+
+.nostyle {
+  border: none;
+}
+
+img {
+  width: 500px;
+}
+.danger-not-allowed {
+  color: red;
+}
+div.post-page {
+  width: 100%;
+}
+
+div.post-page div.image {
+  max-height: 200px;
+  overflow: hidden;
+  border-radius: 10px;
+  /* display: flex; */
+}
+div.post-page div.image img {
+  object-fit: contain;
+  width: 100%;
+  object-position: center center;
 }
 div.post-page a {
-    color:#333;
-    text-decoration: underline;
+  color: #333;
+  text-decoration: underline;
 }
-div.post-page h1{
-    text-align: center;
-    margin: 10px 5px;
+div.post-page h1 {
+  text-align: center;
+  margin: 10px 5px;
 }
-div.post-page time{
-    text-align: center;
-    display: block;
-    font-size: .8rem;
-    color: #ccc;
+div.post-page time {
+  text-align: center;
+  display: block;
+  font-size: 0.8rem;
+  color: #ccc;
 }
-div.post-page div.author{
-    text-align: center;
-    margin-bottom: 11px;
-    font-size: .5rem;
+div.post-page div.author {
+  text-align: center;
+  margin-bottom: 11px;
+  font-size: 0.5rem;
 }
-div.post-page .content p{
-    line-height: 1.6rem;
+div.post-page .content p {
+  line-height: 1.6rem;
 }
-div.edit-row{
-    text-align: center;
-    margin-bottom: 8px;
+div.edit-row {
+  text-align: center;
+  margin-bottom: 8px;
 }
-div.post-page a.edit-btn{
-    background-color: #333;
-    color: #fff;
+div.post-page a.edit-btn {
+  background-color: #333;
+  color: #fff;
 
-    display: inline-flex;
-    align-items: center;
+  display: inline-flex;
+  align-items: center;
 
-    gap: 6px;
-    border-radius: 4px;
-    padding: 8px 25px;
-    text-decoration: none;
+  gap: 6px;
+  border-radius: 4px;
+  padding: 8px 25px;
+  text-decoration: none;
 }
-a svg{
-    height: 25px;
+a svg {
+  height: 25px;
+}
+div.loggedAs {
+  background: #ccc;
+  padding: 0.23rem;
+  border-radius: 0.2rem;
+  font-size: 13px;
+  color: grey;
+}
+div.loggedAs span {
+  color: #cc9f6a;
+}
+div.loggedAs:hover span {
+  color: #ff4949;
 }
